--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -7,6 +7,9 @@ branches:
     tracks-release-branches: true
     prevent-increment-of-merged-branch-version: false
 
+major-version-bump-message: (^(breaking|major):)|(\+semver:\s?(breaking|major))
+minor-version-bump-message: (^(feature|minor):)|(\+semver:\s?(feature|minor))
+patch-version-bump-message: (^(fix|patch):)|(\+semver:\s?(fix|patch))
 
 #Set the build numbers to be xxx, example 0.1.0-myfeature001 or 0.2.1-beta001. This allows for longer feature branch names, and can be increased for more active projects
 #You should set this to the number of commits you expect to have for a given branch before merging.
